--- a/index.html
+++ b/index.html
@@ -3,155 +3,105 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BSIT Curriculum - First Semester 2324</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
-        }
-        h1, h2 {
-            color: #333;
-        }
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            margin-top: 20px;
-        }
-        th, td {
-            border: 1px solid #ddd;
-            padding: 8px;
-            text-align: left;
-        }
-        th {
-            background-color: #f2f2f2;
-        }
-    </style>
+    <title>BSIT Curriculum - First Semester (2324)</title>
 </head>
 <body>
 
-    <h1>BSIT Curriculum - First Semester 2324</h1>
+<h1>School Year 2324 - First Semester</h1>
+<p>BA-AT, SHIELA MAE DIVINO (2022-00004-SM-0)</p>
 
-    <h2>Student Information</h2>
-    <p>Student: BA-AT, SHIELA MAE DIVINO (2022-00004-SM-0)</p>
-
-    <table>
-        <thead>
-            <tr>
-                <th>#</th>
-                <th>Subject Code</th>
-                <th>Description</th>
-                <th>Lec</th>
-                <th>Lab</th>
-                <th>Unit</th>
-                <th>Schedule</th>
-                <th>Faculty</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>1</td>
-                <td>COMP 006</td>
-                <td>Data Structures and Algorithms</td>
-                <td>2.0</td>
-                <td>3.0</td>
-                <td>3.0</td>
-                <td>1 - BSIT-SM 2-1 - M/S 12:30PM-03:30PM/07:30AM-09:30AM</td>
-                <td>Faculty: HERMOGENES, JAYSON</td>
-            </tr>
-        </thead>
-        </tbody>
-        <tr>
-            <td>2</td>
-                <td>COMP 007</td>
-                <td>Operating Systems</td>
-                <td>2.0</td>
-                <td>3.0</td>
-                <td>3.0</td>
-                <td>1 - BSIT-SM 2-1 - TH/TH 7:30AM-10:30AM/10:30AM-12:30PM</td>
-                <td>Faculty: SANTOS, HOMER</td>
-        </tr>
-    </thead>
-</tbody>
-<tr>
-    <td>3</td>
+<table border="1">
+    <tr>
+        <th>#</th>
+        <th>Subject Code</th>
+        <th>Description</th>
+        <th>Lec</th>
+        <th>Lab</th>
+        <th>Unit</th>
+        <th>Schedule</th>
+        <th>Faculty</th>
+    </tr>
+    <tr>
+        <td>1</td>
+        <td>COMP 006</td>
+        <td>Data Structures and Algorithms</td>
+        <td>2.0</td>
+        <td>3.0</td>
+        <td>3.0</td>
+        <td>1 - BSIT-SM 2-1 - M/S 12:30PM-03:30PM/07:30AM-09:30AM</td>
+        <td>HERMOGENES, JAYSON</td>
+    </tr>
+    <tr>
+        <td>2</td>
+        <td>COMP 007</td>
+        <td>Operating Systems</td>
+        <td>2.0</td>
+        <td>3.0</td>
+        <td>3.0</td>
+        <td>1 - BSIT-SM 2-1 - TH/TH 07:30AM-10:30AM/10:30AM-12:30PM</td>
+        <td>SANTOS, HOMER</td>
+    </tr>
+    <tr>
+        <td>3</td>
         <td>COMP 008</td>
         <td>Data Communications and Networking</td>
         <td>2.0</td>
         <td>3.0</td>
         <td>3.0</td>
         <td>1 - BSIT-SM 2-1 - F/F 07:30AM-10:30AM/10:30AM-12:30PM</td>
-        <td>Faculty: SANTOS, HOMER</td>
-</tr>
-</thead>
-</tbody>
-<tr>
-    <td>4</td>
+        <td>SANTOS, HOMER</td>
+    </tr>
+    <tr>
+        <td>4</td>
         <td>ELEC IT-FE1</td>
         <td>BSIT Free Elective 1</td>
         <td>3.0</td>
         <td>0.0</td>
         <td>3.0</td>
         <td>1 - BSIT-SM 2-1 - M 07:30AM-10:30AM</td>
-        <td>Faculty: PASCUAL, MARK JONATHAN</td>
-</tr>
-</thead>
-</tbody>
-<tr>
-    <td>5</td>
+        <td>PASCUAL, MARK JONATHAN</td>
+    </tr>
+    <tr>
+        <td>5</td>
         <td>GEED 001</td>
         <td>Understanding the Self/Pag-unawa sa Sarili</td>
         <td>3.0</td>
         <td>0.0</td>
         <td>3.0</td>
-        <td>1 - BSIT-SM 2-1 -  S 05:00PM-08:00PM</td>
-        <td>Faculty: PENAMANTE, CHRISTINE JOY</td>
-</tr>
-</thead>
-</tbody>
-<tr>
-    <td>6</td>
+        <td>1 - BSIT-SM 2-1 - S 05:00PM-08:00PM</td>
+        <td>PEÑAMANTE, CHRISTINE JOY</td>
+    </tr>
+    <tr>
+        <td>6</td>
         <td>GEED 028</td>
         <td>Reading Visual Arts</td>
         <td>3.0</td>
         <td>0.0</td>
         <td>3.0</td>
         <td>1 - BSIT-SM 2-1 - W 02:00PM-05:00PM</td>
-        <td>Faculty: PICARDAL, PETER</td>
-</tr>
-</thead>
-</tbody>
-<tr>
-    <td>7</td>
+        <td>PICARDAL, PETER</td>
+    </tr>
+    <tr>
+        <td>7</td>
         <td>INTE 201</td>
         <td>Programming 3 (Structured Programming)</td>
         <td>2.0</td>
         <td>3.0</td>
         <td>3.0</td>
         <td>1 - BSIT-SM 2-1 - M/T/S 07:30PM-09:00PM/07:30PM-09:00PM/11:30AM-01:30PM</td>
-        <td>Faculty: HERMOGENES, JAYSON</td>
-</tr>
-</thead>
-</tbody>
-<tr>
-    <td>8</td>
+        <td>HERMOGENES, JAYSON</td>
+    </tr>
+    <tr>
+        <td>8</td>
         <td>PATHFIT 3</td>
         <td>Physical Activity Towards Health and Fitness 3</td>
         <td>2.0</td>
         <td>0.0</td>
         <td>2.0</td>
         <td>1 - BSIT-SM 2-1 - TH 05:00PM-07:00PM</td>
-        <td>Faculty:  SARMIENTO, MARK LEE</td>
-</tr>
-    </table>
-
+        <td>SARMIENTO, MARK LEE</td>
+    </tr>
+</table>
 
 </body>
 </html>
-
-
-
-
-
-
-
-
